--- a/api-gateway-service2/src/main/resources/application.properties
+++ b/api-gateway-service2/src/main/resources/application.properties
@@ -9,3 +9,10 @@ api.gateway.endpoints[1].location=http://${ermp.service.host}:8080
 api.gateway.endpoints[2].path=[/]*api/users.*
 api.gateway.endpoints[2].method=DELETE
 api.gateway.endpoints[2].location=http://${ermp.service.host}:8080
+
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:4306/ermp
+spring.datasource.username=mysqluser
+spring.datasource.password=mysqlpw
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
