--- a/api-gateway-service2/build.gradle
+++ b/api-gateway-service2/build.gradle
@@ -13,6 +13,8 @@ apply plugin: "org.springframework.boot"
 
 dependencies {
     compile project(":api-gateway-common-auth-web")
+    
+    compile "mysql:mysql-connector-java:5.1.36"
 
     compile "org.apache.httpcomponents:httpclient:4.5"
     compile "org.apache.httpcomponents:fluent-hc:4.5.1"
