--- a/myjs-frontend/package.json
+++ b/myjs-frontend/package.json
@@ -34,6 +34,7 @@
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.0",
+    "react-loader": "^2.4.0",
     "react-redux": "^4.4.0",
     "react-router": "^2.7.0",
     "react-router-bootstrap": "^0.20.1",
