--- a/myjs-frontend/package.json
+++ b/myjs-frontend/package.json
@@ -31,6 +31,9 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "history": "^1.17.0",
+    "invariant": "^2.1.1",
+    "js-cookie": "^2.1.0",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.0",
@@ -39,6 +42,8 @@
     "react-router": "^2.7.0",
     "react-router-bootstrap": "^0.20.1",
     "redux": "^3.0.2",
-    "redux-router": "^1.0.0-beta7"
+    "redux-logger": "^2.6.0",
+    "redux-router": "^1.0.0-beta7",
+    "redux-thunk": "^1.0.3"
   }
 }
