--- a/api-gateway-service2/src/main/resources/application.properties
+++ b/api-gateway-service2/src/main/resources/application.properties
@@ -9,6 +9,9 @@ api.gateway.endpoints[1].location=http://${ermp.service.host}:8080
 api.gateway.endpoints[2].path=[/]*api/users.*
 api.gateway.endpoints[2].method=DELETE
 api.gateway.endpoints[2].location=http://${ermp.service.host}:8080
+api.gateway.endpoints[3].path=[/]*api/customers.*
+api.gateway.endpoints[3].method=POST
+api.gateway.endpoints[3].location=http://${ermp.service.host}:8080
 
 server.port=8081
 
